fix filter dropdown z-index (#8623)

--- a/superset/assets/src/visualizations/FilterBox/FilterBox.less
+++ b/superset/assets/src/visualizations/FilterBox/FilterBox.less
@@ -77,5 +77,4 @@ ul.select2-results div.filter_box {
 
 .filter-container .filter-badge-container + div {
   width: 100%;
-  z-index: @z-index-dropdown;
 }
